Cleaning up styling.  Simplified menu behavior (removing hamburger partial), added selected menu state to differentiate focus, fixed view window scrolling, fixed card scroll region alignment, simplified card titles, removed border-radius rounding

--- a/app/styles/color-overrides.scss
+++ b/app/styles/color-overrides.scss
@@ -1,11 +1,10 @@
 /*** Colors ***/
-/*$primary-color: #4caf50;*/
-$primary-color: #eb0a1e;
-$primary-color-light: lighten($primary-color, 15%);
-$primary-color-dark: darken($primary-color, 15%);
+$brand-color: #eb0a1e;
+$brand-color-light: lighten($brand-color, 15%);
+$brand-color-dark: darken($brand-color, 15%);
 
-$primary-background-color: #212527;
-$primary-background-color-light: #3F3F3F;
+$primary-background-color: color("grey", "darken-4");
+$primary-background-color-light: color("grey", "darken-3");
 
 $secondary-color: #2e80ab;
 $success-color: color("green", "base");
